--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Transfer sets of ArcGIS Online items from one organization to another",
   "main": "index.js",
   "scripts": {
-    "test": "ts-node node_modules/jasmine/bin/jasmine --config=jasmine.json"
+    "test": "ts-node node_modules/jasmine/bin/jasmine --config=jasmine.json",
+    "docs": "typedoc --out ./docs/src/ src/index.ts"
   },
   "repository": {
     "type": "git",
