--- a/package.json
+++ b/package.json
@@ -31,12 +31,19 @@
     "@types/isomorphic-fetch": "0.0.34",
     "@types/jasmine": "^2.8.9",
     "@types/node": "^10.11.7",
+    "coveralls": "^3.0.2",
     "fetch-mock": "^7.0.7",
     "jasmine": "^3.2.0",
     "jasmine-core": "^3.2.1",
+    "karma": "^2.0.5",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-firefox-launcher": "^1.1.0",
+    "karma-ie-launcher": "^1.0.0",
+    "karma-jasmine": "^1.1.2",
+    "karma-typescript": "^3.0.13",
     "node-fetch": "^2.2.0",
     "ts-node": "^7.0.1",
-    "typescript": "^3.1.2"
+    "typescript": "^2.9.2"
   },
   "dependencies": {
     "es6-promise": "^4.2.5",
