--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "fetch-mock": "^7.0.7",
     "jasmine": "^3.2.0",
     "jasmine-core": "^3.2.1",
+    "jasmine-spec-reporter": "^4.2.1",
     "node-fetch": "^2.2.0",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.2"
