--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@types/isomorphic-fetch": "0.0.34",
     "@types/jasmine": "^2.8.9",
     "@types/node": "^10.11.7",
-    "coveralls": "^3.0.2",
     "fetch-mock": "^7.0.7",
     "jasmine": "^3.2.0",
     "jasmine-core": "^3.2.1",
@@ -44,9 +43,11 @@
     "karma-firefox-launcher": "^1.1.0",
     "karma-ie-launcher": "^1.0.0",
     "karma-jasmine": "^1.1.2",
+    "karma-requirejs": "^1.1.0",
     "karma-typescript": "^3.0.13",
     "karma-typescript-es6-transform": "^1.0.4",
     "node-fetch": "^2.2.0",
+    "requirejs": "^2.3.6",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.2"
   },
