--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "@types/isomorphic-fetch": "0.0.34",
     "@types/jasmine": "^2.8.9",
     "@types/node": "^10.11.7",
+    "coveralls": "^3.0.2",
     "fetch-mock": "^7.0.7",
     "jasmine": "^3.2.0",
     "jasmine-core": "^3.2.1",
     "jasmine-spec-reporter": "^4.2.1",
     "karma": "^3.1.1",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-coveralls": "^2.1.0",
     "karma-firefox-launcher": "^1.1.0",
     "karma-ie-launcher": "^1.0.0",
     "karma-jasmine": "^1.1.2",
