--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Transfer sets of ArcGIS Online items from one organization to another",
   "main": "index.js",
   "scripts": {
+    "test": "npm run test:node && npm run test:chrome",
+    "test:chrome": "karma start --single-run --browsers=Chrome",
+    "test:firefox": "karma start --single-run --browsers=Firefox",
     "test:node": "ts-node node_modules/jasmine/bin/jasmine --config=jasmine.json",
-    "test": "karma start --single-run --browsers=Chrome",
     "docs": "typedoc --out ./docs/src/ src/index.ts",
     "build:esm": "tsc --module ES2015 --outDir ./dist/esm --declaration",
     "build:cjs": "tsc --module CommonJS --outDir ./dist/cjs"
