--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     /* Strict Type-Checking Options */
     "strict": true,                            /* Enable all strict type-checking options. */
     "noImplicitAny": true,                 /* Raise error on expressions and declarations with an implied 'any' type. */
-    "strictNullChecks": false,              /* Enablecd dev/arc cd strict null checks. */
+    "strictNullChecks": false,              /* Enabled dev/arc cd strict null checks. */
     // "noImplicitThis": true,                /* Raise error on 'this' expressions with an implied 'any' type. */
     "alwaysStrict": true,                  /* Parse in strict mode and emit "use strict" for each source file. */
 
