--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "dev:esm": "tsc -w --module es2015 --outDir ./dist/esm --declaration",
     "dev:umd": "rollup -w -c ./umd-base-profile.js",
     "dev:node": "tsc -w --module commonjs --outDir ./dist/node",
+    "lint": "tslint --project tsconfig.json",
     "test": "npm run test:node && npm run test:chrome",
+    "test:ci": "npm run lint && npm run test:node && npm run test:chrome:ci && npm run test:firefox",
     "test:chrome": "karma start --single-run --browsers=ChromeHeadlessCI",
+    "test:chrome:ci": "karma start --single-run --browsers ChromeHeadlessCI karma.conf.js",
     "test:firefox": "karma start --single-run --browsers=Firefox",
     "test:node": "ts-node node_modules/jasmine/bin/jasmine --config=jasmine.json",
     "docs": "typedoc --target ES5 --out ./docs/src/ src/index.ts",
