--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "@types/node": "^10.11.7",
     "coveralls": "^3.0.2",
     "fetch-mock": "^7.0.7",
+    "grunt": "^1.0.3",
+    "grunt-tslint": "^5.0.2",
     "jasmine": "^3.2.0",
     "jasmine-core": "^3.2.1",
     "jasmine-spec-reporter": "^4.2.1",
