--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "typescript": "^3.2.2"
   },
   "dependencies": {
+    "adlib": "^2.3.1",
     "es6-promise": "^4.2.5",
     "isomorphic-fetch": "^2.2.1",
     "isomorphic-form-data": "^2.0.0",
