Updated versions and moved arcgis-rest-* to dependencies

--- a/package.json
+++ b/package.json
@@ -38,13 +38,6 @@
   },
   "homepage": "https://github.com/Esri/arcgis-clone-js#readme",
   "devDependencies": {
-    "@esri/arcgis-rest-auth": "^1.14.3",
-    "@esri/arcgis-rest-common-types": "^1.14.3",
-    "@esri/arcgis-rest-feature-service-admin": "^1.14.3",
-    "@esri/arcgis-rest-groups": "^1.14.3",
-    "@esri/arcgis-rest-items": "^1.14.3",
-    "@esri/arcgis-rest-request": "^1.14.3",
-    "@esri/arcgis-rest-sharing": "^1.14.3",
     "@types/adlib": "^3.0.0",
     "@types/arcgis-js-api": "^4.9.0",
     "@types/fetch-mock": "^6.0.4",
@@ -81,10 +74,19 @@
     "tslint-config-prettier": "^1.6.0",
     "tslint-config-standard": "^6.0.1",
     "typedoc": "^0.13.0",
-    "typescript": "^3.2.2"
+    "typescript": "^3.2.2",
+    "webpack": "^4.28.4",
+    "webpack-cli": "^3.2.1"
   },
   "dependencies": {
-    "adlib": "^2.3.1",
+    "@esri/arcgis-rest-auth": "^1.15.2",
+    "@esri/arcgis-rest-common-types": "^1.15.2",
+    "@esri/arcgis-rest-feature-service-admin": "^1.15.2",
+    "@esri/arcgis-rest-groups": "^1.15.2",
+    "@esri/arcgis-rest-items": "^1.15.2",
+    "@esri/arcgis-rest-request": "^1.15.2",
+    "@esri/arcgis-rest-sharing": "^1.15.2",
+    "adlib": "^3.0.0",
     "es6-promise": "^4.2.5",
     "isomorphic-fetch": "^2.2.1",
     "isomorphic-form-data": "^2.0.0",
