Separated library from demos

--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "module": "dist/esm/index.js",
   "js:next": "dist/esm/index.js",
   "scripts": {
-    "build": "npm run build:node && npm run build:umd && npm run build:esm",
-    "build:esm": "tsc --module es2015 --outDir ./dist/esm --declaration",
-    "build:umd": "rollup -c ./umd-base-profile.js && rollup -c ./umd-production-profile.js",
+    "build": "npm run build:node && npm run build:umd && npm run build:esm && npm run build:tsumd && npm run build:webpack",
     "build:node": "tsc --module commonjs --outDir ./dist/node",
+    "build:umd": "rollup -c ./umd-base-profile.js && rollup -c ./umd-production-profile.js",
+    "build:esm": "tsc --module es2015 --outDir ./dist/esm --declaration",
     "build:tsumd": "tsc --module umd --outDir ./dist/tsumd",
     "build:webpack": "webpack --config webpack.config.js",
-    "build:dist": "npm run build:tsumd && npm run build:webpack",
+    "build:demos": "cd demos && tsc --module umd --outDir ./demo_common && cp ../dist/*.js ./lib",
     "dev:esm": "tsc -w --module es2015 --outDir ./dist/esm --declaration",
     "dev:umd": "rollup -w -c ./umd-base-profile.js",
     "dev:node": "tsc -w --module commonjs --outDir ./dist/node",
