--- a/demos/tsconfig.json
+++ b/demos/tsconfig.json
@@ -14,7 +14,7 @@
     //"declarationDir": "./types",
     "sourceMap": true,                     /* Generates corresponding '.map' file. */
     // "outFile": "./",                       /* Concatenate and emit output to single file. */
-    "outDir": "./dist/",                        /* Redirect output structure to the directory. */
+    //"outDir": "./dist/",                        /* Redirect output structure to the directory. */
     // "rootDir": "./",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "removeComments": true,                /* Do not emit comments to output. */
     // "noEmit": true,                        /* Do not emit outputs. */
@@ -63,8 +63,7 @@
     "node_modules"
   ],
   "include": [
-    "./node_modules/@types",
-    "src",
-    "test"
+    "../node_modules/@types",
+    "./demo_common"
   ]
 }
