--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "typescript": "^3.0.0"
   },
   "dependencies": {
+    "@types/adlib": "^3.0.1",
     "es6-promise": "^4.2.1",
     "isomorphic-fetch": "^2.2.1",
     "isomorphic-form-data": "^2.0.0",
