--- a/package.json
+++ b/package.json
@@ -90,19 +90,19 @@
     "test:all": "npm run test:node && npm run test:firefox && npm run test:chrome",
     "docs:build": "rimraf docs/build && npm run docs:typedoc && npm run docs:build:acetate && npm run docs:build:sass && npm run docs:build:images && npm run docs:build:js",
     "docs:build:acetate": "ENV=prod acetate build --config docs/acetate.config.js",
-    "docs:build:sass": "node-sass --output docs/build/arcgis-rest-js/css --source-map true --source-map-contents docs/src/sass",
-    "docs:build:images": "cpx \"docs/src/**/*.{png,jpg,jpeg,gif,svg,webm,ogg}\" docs/build/arcgis-rest-js",
-    "docs:build:js": "cpx \"docs/src/**/{api-search,nav-toggle}.js\" docs/build/arcgis-rest-js",
+    "docs:build:sass": "node-sass --output docs/build/solutions.js/css --source-map true --source-map-contents docs/src/sass",
+    "docs:build:images": "cpx \"docs/src/**/*.{png,jpg,jpeg,gif,svg,webm,ogg}\" docs/build/solutions.js",
+    "docs:build:js": "cpx \"docs/src/**/{api-search,nav-toggle}.js\" docs/build/solutions.js",
     "docs:deploy": "npm run docs:build && node support/deploy-doc-site.js",
     "docs:typedoc": "node docs/build-typedoc.js",
     "docs:dev:typedoc": "onchange -v 'packages/*/src/**/*.ts' -- npm run docs:typedoc",
     "predocs:serve": "npm run docs:typedoc",
     "docs:serve": "rimraf docs/build && concurrently \"npm run docs:dev:js\" \"npm run docs:dev:images\" \"npm run docs:dev:acetate\" \"npm run docs:dev:sass\" \"npm run docs:dev:typedoc\"",
-    "docs:dev:images": "cpx \"docs/src/**/*.{png,jpg,jpeg,gif,svg,webm,ogg}\" docs/build/arcgis-rest-js -w",
-    "docs:dev:acetate": "acetate server --log=debug --config docs/acetate.config.js --startPath arcgis-rest-js/",
+    "docs:dev:images": "cpx \"docs/src/**/*.{png,jpg,jpeg,gif,svg,webm,ogg}\" docs/build/solutions.js -w",
+    "docs:dev:acetate": "acetate server --log=debug --config docs/acetate.config.js --startPath solutions.js/",
     "predocs:dev:sass": "npm run docs:build:sass",
-    "docs:dev:sass": "node-sass --watch --recursive --output docs/build/arcgis-rest-js/css --source-map true --source-map-contents docs/src/sass",
-    "docs:dev:js": "cpx \"docs/src/**/{api-search,nav-toggle}.js\" docs/build/arcgis-rest-js -w",
+    "docs:dev:sass": "node-sass --watch --recursive --output docs/build/solutions.js/css --source-map true --source-map-contents docs/src/sass",
+    "docs:dev:js": "cpx \"docs/src/**/{api-search,nav-toggle}.js\" docs/build/solutions.js -w",
     "docs:srihash": "node docs/generate-srihashes.js",
     "lint": "tslint --project tsconfig.json",
     "lint:fix": "tslint --project tsconfig.json --fix",
