--- a/package.json
+++ b/package.json
@@ -45,13 +45,14 @@
     "prettier": "^1.14.3",
     "resolve": "^1.5.0",
     "rimraf": "^2.6.2",
-    "rollup": "^0.66.4",
+    "rollup": "^1.6.0",
     "rollup-plugin-commonjs": "^8.2.6",
     "rollup-plugin-filesize": "^5.0.1",
     "rollup-plugin-json": "^2.3.0",
-    "rollup-plugin-node-resolve": "^3.0.3",
-    "rollup-plugin-typescript2": "^0.4.6",
-    "rollup-plugin-uglify": "^3.0.0",
+    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-typescript2": "^0.20.1",
+    "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-uglify": "^6.0.2",
     "shelljs": "^0.7.8",
     "slug": "^0.9.1",
     "sri-toolbox": "0.2.0",
