--- a/demos/view/package.json
+++ b/demos/view/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "solution-common",
+  "name": "solution-view",
   "version": "0.0.1",
   "private": true,
-  "description": "common code for demos",
+  "description": "view demo",
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
