--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "dependencies": {
     "@types/adlib": "^3.0.1",
     "es6-promise": "^4.2.1",
+    "http-server": "^0.11.1",
     "isomorphic-fetch": "^2.2.1",
     "isomorphic-form-data": "^2.0.0",
     "tslib": "^1.8.1"
