--- a/packages/creator/package.json
+++ b/packages/creator/package.json
@@ -11,6 +11,16 @@
   "files": [
     "dist/**"
   ],
+  "devDependencies": {
+    "rollup": "^1.6.0",
+    "rollup-plugin-commonjs": "^8.2.6",
+    "rollup-plugin-filesize": "^5.0.1",
+    "rollup-plugin-json": "^2.3.0",
+    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-typescript2": "^0.20.1",
+    "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-uglify": "^6.0.2"
+  },
   "dependencies": {
     "@esri/arcgis-rest-auth": "^1.17.1",
     "@esri/arcgis-rest-common-types": "^1.17.1",
@@ -51,6 +61,5 @@
     "arcgis",
     "esri",
     "ES6"
-  ],
-  "devDependencies": {}
+  ]
 }
