Added compiler options

--- a/packages/solution/tsconfig.json
+++ b/packages/solution/tsconfig.json
@@ -1,4 +1,7 @@
 {
+  "compilerOptions": {
+    "strictNullChecks": true              /* Enable strict null checks. */
+  },
   "extends": "../../tsconfig.json",
   "include": [
       "src/**/*.ts"
