--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,6 +42,7 @@
     "typeRoots": [
       "./node_modules/@types"
     ],                                        /* List of folders to include type definitions from. */
+    "skipLibCheck": true,
     "types": [
       "node",
       "jasmine"
