--- a/packages/solution/package.json
+++ b/packages/solution/package.json
@@ -17,18 +17,19 @@
     "rollup-plugin-filesize": "^5.0.1",
     "rollup-plugin-json": "^2.3.0",
     "rollup-plugin-node-resolve": "^4.0.1",
-    "rollup-plugin-typescript2": "^0.20.1",
     "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-typescript2": "^0.20.1",
     "rollup-plugin-uglify": "^6.0.2"
   },
   "dependencies": {
-    "@esri/arcgis-rest-auth": "^1.17.1",
-    "@esri/arcgis-rest-common-types": "^1.17.1",
-    "@esri/arcgis-rest-feature-service-admin": "^1.17.1",
-    "@esri/arcgis-rest-groups": "^1.17.1",
-    "@esri/arcgis-rest-items": "^1.17.1",
-    "@esri/arcgis-rest-request": "^1.17.1",
-    "@esri/arcgis-rest-sharing": "^1.17.1",
+    "@esri/arcgis-rest-auth": "^2.0.1",
+    "@esri/arcgis-rest-feature-layer": "^2.0.1",
+    "@esri/arcgis-rest-geocoding": "^2.0.1",
+    "@esri/arcgis-rest-portal": "^2.0.1",
+    "@esri/arcgis-rest-request": "^2.0.1",
+    "@esri/arcgis-rest-routing": "^2.0.1",
+    "@esri/arcgis-rest-service-admin": "^2.0.1",
+    "@esri/arcgis-rest-types": "^2.0.1",
     "adlib": "^3.0.0",
     "tslib": "^1.9.3"
   },
