--- a/packages/simple-types/package.json
+++ b/packages/simple-types/package.json
@@ -11,6 +11,17 @@
   "files": [
     "dist/**"
   ],
+  "peerDependencies": {
+    "@esri/arcgis-rest-auth": "^2.0.1",
+    "@esri/arcgis-rest-feature-layer": "^2.0.1",
+    "@esri/arcgis-rest-geocoding": "^2.0.1",
+    "@esri/arcgis-rest-portal": "^2.0.1",
+    "@esri/arcgis-rest-request": "^2.0.1",
+    "@esri/arcgis-rest-routing": "^2.0.1",
+    "@esri/arcgis-rest-service-admin": "^2.0.1",
+    "@esri/arcgis-rest-types": "^2.0.1",
+    "@esri/solution-common": "^0.0.1"
+  },
   "devDependencies": {
     "@esri/arcgis-rest-auth": "^2.0.1",
     "@esri/arcgis-rest-feature-layer": "^2.0.1",
@@ -20,6 +31,7 @@
     "@esri/arcgis-rest-routing": "^2.0.1",
     "@esri/arcgis-rest-service-admin": "^2.0.1",
     "@esri/arcgis-rest-types": "^2.0.1",
+    "@esri/solution-common": "^0.0.1",
     "rollup": "^1.6.0",
     "rollup-plugin-commonjs": "^8.2.6",
     "rollup-plugin-filesize": "^5.0.1",
