--- a/packages/feature-layer/package.json
+++ b/packages/feature-layer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@esri/solution-deployer",
+  "name": "@esri/solution-feature-layer",
   "version": "0.0.1",
   "description": "to do",
   "main": "dist/node/index.js",
@@ -20,10 +20,7 @@
     "@esri/arcgis-rest-routing": "^2.0.1",
     "@esri/arcgis-rest-service-admin": "^2.0.1",
     "@esri/arcgis-rest-types": "^2.0.1",
-    "@esri/solution-common": "^0.0.1",
-    "@esri/solution-feature-layer": "^0.0.1",
-    "@esri/solution-simple-types": "^0.0.1",
-    "@esri/solution-storymap": "^0.0.1"
+    "@esri/solution-common": "^0.0.1"
   },
   "devDependencies": {
     "@esri/arcgis-rest-auth": "^2.0.1",
@@ -35,9 +32,6 @@
     "@esri/arcgis-rest-service-admin": "^2.0.1",
     "@esri/arcgis-rest-types": "^2.0.1",
     "@esri/solution-common": "^0.0.1",
-    "@esri/solution-feature-layer": "^0.0.1",
-    "@esri/solution-simple-types": "^0.0.1",
-    "@esri/solution-storymap": "^0.0.1",
     "rollup": "^1.6.0",
     "rollup-plugin-commonjs": "^8.2.6",
     "rollup-plugin-filesize": "^5.0.1",
