--- a/packages/creator/package.json
+++ b/packages/creator/package.json
@@ -21,7 +21,9 @@
     "@esri/arcgis-rest-service-admin": "^2.0.1",
     "@esri/arcgis-rest-types": "^2.0.1",
     "@esri/solution-common": "^0.0.1",
-    "@esri/solution-simple-types": "^0.0.1"
+    "@esri/solution-feature-layer": "^0.0.1",
+    "@esri/solution-simple-types": "^0.0.1",
+    "@esri/solution-storymap": "^0.0.1"
   },
   "devDependencies": {
     "@esri/arcgis-rest-auth": "^2.0.1",
@@ -33,7 +35,9 @@
     "@esri/arcgis-rest-service-admin": "^2.0.1",
     "@esri/arcgis-rest-types": "^2.0.1",
     "@esri/solution-common": "^0.0.1",
+    "@esri/solution-feature-layer": "^0.0.1",
     "@esri/solution-simple-types": "^0.0.1",
+    "@esri/solution-storymap": "^0.0.1",
     "rollup": "^1.6.0",
     "rollup-plugin-commonjs": "^8.2.6",
     "rollup-plugin-filesize": "^5.0.1",
