--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "karma-firefox-launcher": "^1.1.0",
     "karma-ie-launcher": "^1.0.0",
     "karma-jasmine": "^1.1.1",
-    "karma-jasmine-diff-reporter": "^1.1.1",
+    "karma-jasmine-diff-reporter": "^2.0.0",
     "karma-safari-launcher": "^1.0.0",
-    "karma-typescript": "^3.0.9",
+    "karma-typescript": "^3.0.13",
     "karma-typescript-es6-transform": "^1.0.3",
     "lerna": "^2.5.1",
     "lint-staged": "^4.3.0",
@@ -50,8 +50,8 @@
     "rollup-plugin-filesize": "^5.0.1",
     "rollup-plugin-json": "^2.3.0",
     "rollup-plugin-node-resolve": "^4.0.1",
-    "rollup-plugin-typescript2": "^0.20.1",
     "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-typescript2": "^0.20.1",
     "rollup-plugin-uglify": "^6.0.2",
     "shelljs": "^0.7.8",
     "slug": "^0.9.1",
@@ -80,7 +80,7 @@
   },
   "scripts": {
     "build": "lerna run build",
-    "clean": "rm -rf packages/*/dist/",
+    "clean": "rm -rf packages/*/dist/ && rm -rf packages/*/.rpt2_cache",
     "test": "npm run lint && npm run test:node && npm run test:chrome",
     "test:chrome:debug": "karma start --auto-watch --no-single-run --browsers=Chrome",
     "test:chrome": "karma start --single-run --browsers=Chrome",
