Ignore test *.js files

--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,5 @@ __*
 # Temporary build products
 packages/*/src/**/*.js
 packages/*/src/**/*.map
+packages/*/test/**/*.js
+packages/*/test/**/*.map
