--- a/package.json
+++ b/package.json
@@ -103,8 +103,8 @@
     "docs:dev:sass": "node-sass --watch --recursive --output docs/build/solution.js/css --source-map true --source-map-contents docs/src/sass",
     "docs:dev:js": "cpx \"docs/src/**/{api-search,nav-toggle}.js\" docs/build/solution.js -w",
     "docs:srihash": "node docs/generate-srihashes.js",
-    "lint": "tslint --project tsconfig.json",
-    "lint:fix": "tslint --project tsconfig.json --fix",
+    "lint": "tslint --project tsconfig.json --exclude '**/*.d.ts'",
+    "lint:fix": "tslint --project tsconfig.json --exclude '**/*.d.ts' --fix",
     "prettify": "prettier --write --parser typescript --tab-width 2 --use-tabs false \"packages/**/+(src|test)/**/*.ts\"",
     "precommit": "lint-staged",
     "postinstall": "npm run bootstrap",
