--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fetch-mock": "^5.13.1",
     "gh-pages": "^1.1.0",
     "gh-release": "^3.4.0",
+    "handlebars": "^4.1.2",
     "husky": "^0.14.3",
     "inspect-process": "^0.5.0",
     "jasmine": "^2.8.0",
