--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "es6-promise": "^4.2.1",
     "isomorphic-fetch": "^2.2.1",
     "isomorphic-form-data": "^2.0.0",
+    "js-yaml": "^3.13.1",
     "tslib": "^1.8.1"
   },
   "lint-staged": {
