--- a/packages/storymap/package.json
+++ b/packages/storymap/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@esri/solution-storymap",
-  "version": "0.0.1",
-  "description": "to do",
+  "version": "1.0.0",
+  "description": "Manages the creation and deployment of Story Map item types.",
   "main": "dist/node/index.js",
   "unpkg": "dist/umd/common.umd.js",
   "module": "dist/esm/index.js",
@@ -20,8 +20,8 @@
     "@esri/arcgis-rest-routing": "^2.0.3",
     "@esri/arcgis-rest-service-admin": "^2.0.3",
     "@esri/arcgis-rest-types": "^2.0.3",
-    "@esri/solution-common": "^0.0.1",
-    "@esri/solution-simple-types": "^0.0.1"
+    "@esri/solution-common": "^1.0.0",
+    "@esri/solution-simple-types": "^1.0.0"
   },
   "devDependencies": {
     "@esri/arcgis-rest-auth": "^2.0.3",
@@ -32,8 +32,8 @@
     "@esri/arcgis-rest-routing": "^2.0.3",
     "@esri/arcgis-rest-service-admin": "^2.0.3",
     "@esri/arcgis-rest-types": "^2.0.3",
-    "@esri/solution-common": "^0.0.1",
-    "@esri/solution-simple-types": "^0.0.1",
+    "@esri/solution-common": "^1.0.0",
+    "@esri/solution-simple-types": "^1.0.0",
     "rollup": "^1.6.0",
     "rollup-plugin-commonjs": "^8.2.6",
     "rollup-plugin-filesize": "^5.0.1",
@@ -64,7 +64,27 @@
     "type": "git",
     "url": "git+https://github.com/Esri/solution.js.git"
   },
-  "contributors": [],
+  "contributors": [
+    {
+      "name": "Mike Tschudi",
+      "email": "mtschudi@esri.com"
+    },
+    {
+      "name": "Chris Fox",
+      "email": "cfox@esri.com"
+    },
+    {
+      "name": "John Hauck",
+      "email": "jhauck@esri.com"
+    },
+    {
+      "name": "Dave Bouwman",
+      "email": "dbouwman@esri.com"
+    },
+    {
+      "name": "John Gravois"
+    }
+  ],
   "bugs": {
     "url": "https://github.com/Esri/solution.js/issues"
   },
