--- a/packages/simple-types/package.json
+++ b/packages/simple-types/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@esri/solution-simple-types",
   "version": "1.0.0",
-  "description": "Manages the creation and deployment of simple item types.",
+  "description": "Manages the creation and deployment of simple item types for @esri/solution.js.",
   "main": "dist/node/index.js",
   "unpkg": "dist/umd/common.umd.js",
   "module": "dist/esm/index.js",
