--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
   },
   "scripts": {
     "build": "lerna run build",
-    "clean": "rm -rf packages/*/dist/ && rm -rf packages/*/.rpt2_cache",
+    "clean": "rm -f packages/*/src/*.d.ts && rm -f packages/*/src/*.js && rm -f packages/*/src/*.js.map && rm -rf packages/*/dist/ && rm -rf packages/*/.rpt2_cache",
     "test": "npm run lint && npm run test:node && npm run test:chrome",
     "test:chrome:debug": "karma start --auto-watch --no-single-run --browsers=Chrome",
     "test:chrome": "karma start --single-run --browsers=Chrome",
