Added coverage reporting via coveralls

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "codecov": "^3.3.0",
     "commitizen": "^3.1.1",
     "concurrently": "^3.5.1",
+    "coveralls": "^3.0.4",
     "cpx": "^1.5.0",
     "cross-spawn": "^5.1.0",
     "cz-lerna-changelog": "github:patrickarlt/cz-lerna-changelog#3fe7650a2e2e624b1f46e5031c96119759698288",
@@ -87,8 +88,9 @@
     "test:firefox": "karma start --single-run --browsers=Firefox",
     "test:node": "jasmine --config=jasmine.json",
     "test:node:debug": "inspect jasmine --config=jasmine.json",
-    "test:ci": "npm run lint && npm run test:node && npm run test:chrome:ci && npm run test:firefox",
+    "test:ci": "npm run lint && npm run test:node && npm run test:chrome:ci && npm run test:firefox && npm run coveralls",
     "test:all": "npm run test:node && npm run test:firefox && npm run test:chrome",
+    "coveralls": "cat coverage/lcov/lcov.info | node node_modules/coveralls/bin/coveralls",
     "docs:build": "rimraf docs/build && npm run docs:typedoc && npm run docs:build:acetate && npm run docs:build:sass && npm run docs:build:images && npm run docs:build:js",
     "docs:build:acetate": "ENV=prod acetate build --config docs/acetate.config.js",
     "docs:build:sass": "node-sass --output docs/build/solution.js/css --source-map true --source-map-contents docs/src/sass",
