--- a/packages/storymap/package.json
+++ b/packages/storymap/package.json
@@ -41,7 +41,8 @@
     "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-plugin-terser": "^4.0.4",
     "rollup-plugin-typescript2": "^0.20.1",
-    "rollup-plugin-uglify": "^6.0.2"
+    "rollup-plugin-uglify": "^6.0.2",
+    "typescript": "^3.4.5"
   },
   "dependencies": {
     "tslib": "^1.9.3"
