Removed Firefox tests from test:ci & test:all because of browser's instability

--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "shelljs": "^0.7.8",
     "slug": "^0.9.1",
     "sri-toolbox": "0.2.0",
-    "ts-node": "^8.1.0",
+    "ts-node": "^8.3.0",
     "tslint": "^5.16.0",
     "tslint-config-prettier": "^1.6.0",
     "tslint-config-standard": "^8.0.1",
@@ -87,8 +87,8 @@
     "test:firefox": "karma start --single-run --browsers=Firefox",
     "test:node": "jasmine --config=jasmine.json",
     "test:node:debug": "inspect jasmine --config=jasmine.json",
-    "test:ci": "npm run lint && npm run test:node && npm run test:chrome:ci && npm run test:firefox && npm run coveralls",
-    "test:all": "npm run test:node && npm run test:chrome && npm run test:firefox",
+    "test:ci": "npm run lint && npm run test:node && npm run test:chrome:ci && npm run coveralls",
+    "test:all": "npm run test:node && npm run test:chrome",
     "coveralls": "cat coverage/lcov/lcov.info | node node_modules/coveralls/bin/coveralls",
     "docs:build": "rimraf docs/build && npm run docs:typedoc && npm run docs:build:acetate && npm run docs:build:sass && npm run docs:build:images && npm run docs:build:js",
     "docs:build:acetate": "ENV=prod acetate build --config docs/acetate.config.js",
