Improved clean command

--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
   },
   "scripts": {
     "build": "lerna run build",
-    "clean": "rm -f packages/*/src/**/*.d.ts && rm -f packages/*/src/**/*.js && rm -f packages/*/src/**/*.js.map && rm -f packages/*/test/**/*.d.ts && rm -f packages/*/test/**/*.js && rm -f packages/*/test/**/*.js.map && rm -rf packages/*/dist/ && rm -rf packages/*/.rpt2_cache",
+    "clean": "rm -rf packages/**/{src,test}/*.{d.ts,js,js.map} && rm -rf packages/*/dist/ && rm -rf packages/*/.rpt2_cache",
     "test": "npm run lint && npm run test:node && npm run test:chrome",
     "test:chrome:debug": "karma start --auto-watch --no-single-run --browsers=Chrome",
     "test:chrome": "karma start --single-run --browsers=Chrome",
