--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,8 @@
 {
   "lerna": "2.0.0",
   "packages": [
-    "packages/*",
-    "demos/*"
+    "demos/*",
+    "packages/*"
   ],
-  "version": "0.1.1"
+  "version": "0.2.0"
 }
