--- a/package.json
+++ b/package.json
@@ -91,8 +91,10 @@
     "test:node": "jasmine --config=jasmine.json",
     "test:node:debug": "inspect jasmine --config=jasmine.json",
     "test:ci": "npm run lint && npm run test:node && npm run test:chrome:ci && npm run coveralls",
+    "test:ci:win": "npm run lint && npm run test:node && npm run test:chrome:ci && npm run coveralls:win",
     "test:all": "npm run test:node && npm run test:chrome",
-    "coveralls": "start cmd.exe /c \"type coverage\\lcov\\lcov.info | node node_modules/coveralls/bin/coveralls.js\"",
+    "coveralls": "cat coverage/lcov/lcov.info | node node_modules/coveralls/bin/coveralls",
+    "coveralls:win": "start cmd.exe /c \"type coverage\\lcov\\lcov.info | node node_modules/coveralls/bin/coveralls.js\"",
     "docs:build": "rimraf docs/build && npm run docs:typedoc && npm run docs:build:acetate && npm run docs:build:sass && npm run docs:build:images && npm run docs:build:js",
     "docs:build:acetate": "ENV=prod acetate build --config docs/acetate.config.js",
     "docs:build:sass": "node-sass --output docs/build/solution.js/css --source-map true --source-map-contents docs/src/sass",
