--- a/package.json
+++ b/package.json
@@ -82,7 +82,9 @@
   },
   "scripts": {
     "build": "lerna run build",
-    "clean": "rm -rf packages/**/{src,test}/*.{d.ts,js,js.map} && rm -rf packages/*/dist/ && rm -rf packages/*/.rpt2_cache",
+    "clean": "npm run clean:src && npm run clean:dist",
+    "clean:src": "rm -rf packages/*/{src,test}/*.{d.ts,js,js.map} && rm -rf packages/*/{src,test}/**/*.{d.ts,js,js.map}",
+    "clean:dist": "rm -rf packages/*/dist/ && rm -rf packages/*/.rpt2_cache",
     "test": "npm run lint && npm run test:node && npm run test:chrome",
     "test:chrome:debug": "karma start --auto-watch --no-single-run --browsers=Chrome",
     "test:chrome": "karma start --single-run --browsers=Chrome",
