--- a/packages/creator/package.json
+++ b/packages/creator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esri/solution-creator",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "description": "Manages the creation of a Solution item for @esri/solution.js.",
   "main": "dist/node/index.js",
   "unpkg": "dist/umd/common.umd.js",
@@ -32,10 +32,10 @@
     "@esri/arcgis-rest-request": "^2.3.0",
     "@esri/arcgis-rest-routing": "^2.3.0",
     "@esri/arcgis-rest-service-admin": "^2.3.0",
-    "@esri/solution-common": "^0.3.2",
-    "@esri/solution-feature-layer": "^0.3.2",
-    "@esri/solution-simple-types": "^0.3.2",
-    "@esri/solution-storymap": "^0.3.2"
+    "@esri/solution-common": "^0.4.0",
+    "@esri/solution-feature-layer": "^0.4.0",
+    "@esri/solution-simple-types": "^0.4.0",
+    "@esri/solution-storymap": "^0.4.0"
   },
   "dependencies": {
     "@esri/arcgis-rest-types": "^2.3.0",
@@ -90,5 +90,6 @@
     "arcgis",
     "esri",
     "ES6"
-  ]
+  ],
+  "gitHead": "932e9755b6924b49073bb58649626d31432c043b"
 }
