--- a/packages/viewer/package.json
+++ b/packages/viewer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esri/solution-viewer",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "description": "to do",
   "main": "dist/node/index.js",
   "unpkg": "dist/umd/common.umd.js",
@@ -29,7 +29,7 @@
     "@esri/arcgis-rest-request": "^2.3.0",
     "@esri/arcgis-rest-routing": "^2.3.0",
     "@esri/arcgis-rest-service-admin": "^2.3.0",
-    "@esri/solution-common": "^0.3.2"
+    "@esri/solution-common": "^0.4.0"
   },
   "dependencies": {
     "@esri/arcgis-rest-types": "^2.3.0",
@@ -64,5 +64,6 @@
     "arcgis",
     "esri",
     "ES6"
-  ]
+  ],
+  "gitHead": "932e9755b6924b49073bb58649626d31432c043b"
 }
