--- a/package.json
+++ b/package.json
@@ -85,10 +85,15 @@
     "clean": "npm run clean:src && npm run clean:dist",
     "clean:src": "rm -rf packages/*/{src,test}/*.{d.ts,js,js.map} && rm -rf packages/*/{src,test}/**/*.{d.ts,js,js.map}",
     "clean:dist": "rm -rf packages/*/dist/ && rm -rf packages/*/.rpt2_cache",
+    "lint": "tslint --project tsconfig.json --exclude '**/*.d.ts'",
+    "lint:fix": "tslint --project tsconfig.json --exclude '**/*.d.ts' --fix",
+    "prettify": "prettier --write --parser typescript --tab-width 2 --use-tabs false \"packages/**/+(src|test)/**/*.ts\"",
+    "dev": "support/dev.sh",
+
     "test": "npm run lint && npm run test:node && npm run test:chrome",
-    "test:chrome:debug": "karma start --auto-watch --no-single-run --browsers=Chrome",
     "test:chrome": "karma start --single-run --browsers=Chrome",
     "test:chrome:ci": "karma start --single-run --browsers ChromeHeadlessCI karma.conf.js",
+    "test:chrome:debug": "karma start --auto-watch --no-single-run --browsers=Chrome",
     "test:firefox": "karma start --single-run --browsers=Firefox",
     "test:node": "jasmine --config=jasmine.json",
     "test:node:debug": "inspect jasmine --config=jasmine.json",
@@ -97,6 +102,7 @@
     "test:all": "npm run test:node && npm run test:chrome",
     "coveralls": "cat coverage/lcov/lcov.info | node node_modules/coveralls/bin/coveralls",
     "coveralls:win": "start cmd.exe /c \"type coverage\\lcov\\lcov.info | node node_modules/coveralls/bin/coveralls.js\"",
+
     "docs:build": "rimraf docs/build && npm run docs:typedoc && npm run docs:build:acetate && npm run docs:build:sass && npm run docs:build:images && npm run docs:build:js",
     "docs:build:acetate": "ENV=prod acetate build --config docs/acetate.config.js",
     "docs:build:sass": "node-sass --output docs/build/solution.js/css --source-map true --source-map-contents docs/src/sass",
@@ -113,18 +119,15 @@
     "docs:dev:sass": "node-sass --watch --recursive --output docs/build/solution.js/css --source-map true --source-map-contents docs/src/sass",
     "docs:dev:js": "cpx \"docs/src/**/{api-search,nav-toggle}.js\" docs/build/solution.js -w",
     "docs:srihash": "node docs/generate-srihashes.js",
-    "lint": "tslint --project tsconfig.json --exclude '**/*.d.ts'",
-    "lint:fix": "tslint --project tsconfig.json --exclude '**/*.d.ts' --fix",
-    "prettify": "prettier --write --parser typescript --tab-width 2 --use-tabs false \"packages/**/+(src|test)/**/*.ts\"",
-    "precommit": "lint-staged",
-    "postinstall": "npm run bootstrap",
-    "bootstrap": "lerna bootstrap",
+
     "prerelease:prepare": "git fetch --all && npm run clean && lerna bootstrap && npm run clean:src && npm test",
     "release:prepare": "lerna publish --skip-git --skip-npm --yes && node ./support/changelog.js",
     "release:review": "git --no-pager diff --word-diff",
     "release:publish": "bash ./support/publish.sh",
-    "c": "git-cz",
-    "dev": "support/dev.sh"
+
+    "postinstall": "npm run bootstrap",
+    "bootstrap": "lerna bootstrap",
+    "precommit": "lint-staged"
   },
   "publishConfig": {
     "access": "public"
