--- a/package.json
+++ b/package.json
@@ -89,7 +89,6 @@
     "lint:fix": "tslint --project tsconfig.json --exclude '**/*.d.ts' --fix",
     "prettify": "prettier --write --parser typescript --tab-width 2 --use-tabs false \"packages/**/+(src|test)/**/*.ts\"",
     "dev": "support/dev.sh",
-
     "test": "npm run lint && npm run test:node && npm run test:chrome",
     "test:chrome": "karma start --single-run --browsers=Chrome",
     "test:chrome:ci": "karma start --single-run --browsers ChromeHeadlessCI karma.conf.js",
@@ -102,29 +101,25 @@
     "test:all": "npm run test:node && npm run test:chrome",
     "coveralls": "cat coverage/lcov/lcov.info | node node_modules/coveralls/bin/coveralls",
     "coveralls:win": "start cmd.exe /c \"type coverage\\lcov\\lcov.info | node node_modules/coveralls/bin/coveralls.js\"",
-
     "docs:build": "rimraf docs/build && npm run docs:typedoc && npm run docs:build:acetate && npm run docs:build:sass && npm run docs:build:images && npm run docs:build:js",
+    "docs:typedoc": "node docs/build-typedoc.js",
     "docs:build:acetate": "ENV=prod acetate build --config docs/acetate.config.js",
     "docs:build:sass": "node-sass --output docs/build/solution.js/css --source-map true --source-map-contents docs/src/sass",
     "docs:build:images": "cpx \"docs/src/**/*.{png,jpg,jpeg,gif,svg,webm,ogg}\" docs/build/solution.js",
     "docs:build:js": "cpx \"docs/src/**/{api-search,nav-toggle}.js\" docs/build/solution.js",
-    "docs:deploy": "npm run docs:build && node support/deploy-doc-site.js",
-    "docs:typedoc": "node docs/build-typedoc.js",
+    "docs:build:dev": "rimraf docs/build && npm run docs:dev:typedoc && npm run docs:dev:acetate && npm run docs:dev:sass && npm run docs:dev:images && npm run docs:dev:js",
     "docs:dev:typedoc": "onchange -v 'packages/*/src/**/*.ts' -- npm run docs:typedoc",
-    "predocs:serve": "npm run docs:typedoc",
-    "docs:serve": "rimraf docs/build && concurrently \"npm run docs:dev:js\" \"npm run docs:dev:images\" \"npm run docs:dev:acetate\" \"npm run docs:dev:sass\" \"npm run docs:dev:typedoc\"",
-    "docs:dev:images": "cpx \"docs/src/**/*.{png,jpg,jpeg,gif,svg,webm,ogg}\" docs/build/solution.js -w",
     "docs:dev:acetate": "acetate server --log=debug --config docs/acetate.config.js --startPath solution.js/index.html",
-    "predocs:dev:sass": "npm run docs:build:sass",
     "docs:dev:sass": "node-sass --watch --recursive --output docs/build/solution.js/css --source-map true --source-map-contents docs/src/sass",
+    "docs:dev:images": "cpx \"docs/src/**/*.{png,jpg,jpeg,gif,svg,webm,ogg}\" docs/build/solution.js -w",
     "docs:dev:js": "cpx \"docs/src/**/{api-search,nav-toggle}.js\" docs/build/solution.js -w",
+    "docs:serve": "rimraf docs/build && npm run docs:build && concurrently \"npm run docs:dev:js\" \"npm run docs:dev:images\" \"npm run docs:dev:acetate\" \"npm run docs:dev:sass\" \"npm run docs:dev:typedoc\"",
+    "docs:deploy": "npm run docs:build && node support/deploy-doc-site.js",
     "docs:srihash": "node docs/generate-srihashes.js",
-
     "prerelease:prepare": "git fetch --all && npm run clean && lerna bootstrap && npm run clean:src && npm test",
     "release:prepare": "lerna publish --skip-git --skip-npm --yes && node ./support/changelog.js",
     "release:review": "git --no-pager diff --word-diff",
     "release:publish": "bash ./support/publish.sh",
-
     "postinstall": "npm run bootstrap",
     "bootstrap": "lerna bootstrap",
     "precommit": "lint-staged"
