--- a/packages/creator/package.json
+++ b/packages/creator/package.json
@@ -14,6 +14,7 @@
   "peerDependencies": {
     "@esri/arcgis-rest-auth": "^2.3.0",
     "@esri/arcgis-rest-portal": "^2.3.0",
+    "@esri/arcgis-rest-request": "^2.3.0",
     "@esri/solution-common": "^0.4.4",
     "@esri/solution-feature-layer": "^0.4.4",
     "@esri/solution-simple-types": "^0.4.4",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@esri/arcgis-rest-auth": "^2.3.0",
     "@esri/arcgis-rest-portal": "^2.3.0",
+    "@esri/arcgis-rest-request": "^2.3.0",
     "@esri/solution-common": "^0.4.4",
     "@esri/solution-feature-layer": "^0.4.4",
     "@esri/solution-simple-types": "^0.4.4",
