--- a/packages/feature-layer/package.json
+++ b/packages/feature-layer/package.json
@@ -13,10 +13,12 @@
   ],
   "peerDependencies": {
     "@esri/arcgis-rest-auth": "^2.3.0",
+    "@esri/arcgis-rest-request": "^2.3.0",
     "@esri/solution-common": "^0.4.4"
   },
   "devDependencies": {
     "@esri/arcgis-rest-auth": "^2.3.0",
+    "@esri/arcgis-rest-request": "^2.3.0",
     "@esri/solution-common": "^0.4.4"
   },
   "dependencies": {
