--- a/packages/feature-layer/package.json
+++ b/packages/feature-layer/package.json
@@ -3,7 +3,7 @@
   "version": "0.5.0",
   "description": "Manages the creation and deployment of feature layers and services for @esri/solution.js.",
   "main": "dist/node/index.js",
-  "unpkg": "dist/umd/common.umd.js",
+  "unpkg": "dist/umd/feature-layer.umd.js",
   "module": "dist/esm/index.js",
   "js:next": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
@@ -12,13 +12,13 @@
     "dist/**"
   ],
   "devDependencies": {
-    "@esri/arcgis-rest-auth": "^2.3.0",
-    "@esri/arcgis-rest-request": "^2.3.0",
+    "@esri/arcgis-rest-auth": "^2.4.0",
+    "@esri/arcgis-rest-request": "^2.4.0",
     "@esri/solution-common": "^0.5.0"
   },
   "dependencies": {
-    "@esri/arcgis-rest-types": "^2.3.0",
-    "tslib": "^1.9.3"
+    "@esri/arcgis-rest-types": "^2.4.0",
+    "tslib": "^1.10.0"
   },
   "scripts": {
     "prepare": "npm run build",
