--- a/packages/common/examples/convertExtent/TypeScript/package.json
+++ b/packages/common/examples/convertExtent/TypeScript/package.json
@@ -9,14 +9,13 @@
     "@esri/arcgis-rest-portal": "^2.4.0",
     "@esri/arcgis-rest-request": "^2.4.0",
     "@esri/arcgis-rest-service-admin": "^2.4.0",
-    "@esri/solution-common": "^0.5.4",
+    "@esri/solution-common": "^0.5.5",
     "@types/requirejs": "^2.1.31",
     "typescript": "^3.6.3"
   },
   "dependencies": {
     "es6-promise": "^4.2.1",
-    "isomorphic-fetch": "^2.2.1",
-    "tslib": "^1.10.0"
+    "isomorphic-fetch": "^2.2.1"
   },
   "scripts": {},
   "repository": {},
