Excluded examples from library compilation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -60,7 +60,8 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
   },
   "exclude": [
-    "node_modules"
+  "node_modules",
+  "packages/**/examples"
   ],
   "include": [
     "./node_modules/@types",
