Simplified and expanded examples

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -60,8 +60,7 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
   },
   "exclude": [
-  "node_modules",
-  "packages/**/examples"
+    "node_modules"
   ],
   "include": [
     "./node_modules/@types",
