--- a/packages/common/examples/getItemInfo/TypeScript/tsconfig.json
+++ b/packages/common/examples/getItemInfo/TypeScript/tsconfig.json
@@ -43,9 +43,8 @@
       "./node_modules/@types"
     ],                                        /* List of folders to include type definitions from. */
     "skipLibCheck": true,
-    "types": [
-    ]                           /* Type declaration files to be included in compilation. */
-    // "allowSyntheticDefaultImports": true  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
+    "types": []                               /* Type declaration files to be included in compilation. */
+    // "allowSyntheticDefaultImports": true   /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
 
     /* Source Map Options */
     // "sourceRoot": "./",                    /* Specify the location where debugger should locate TypeScript files instead of source locations. */
