--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -12,12 +12,13 @@
     "dist/**"
   ],
   "devDependencies": {
-    "@esri/arcgis-rest-auth": "^2.6.0",
-    "@esri/arcgis-rest-feature-layer": "^2.6.0",
-    "@esri/arcgis-rest-portal": "^2.6.0",
-    "@esri/arcgis-rest-request": "^2.6.0",
-    "@esri/arcgis-rest-service-admin": "^2.6.0",
-    "rollup": "^1.22.0"
+    "@esri/arcgis-rest-auth": "^2.6.1",
+    "@esri/arcgis-rest-feature-layer": "^2.6.1",
+    "@esri/arcgis-rest-portal": "^2.6.1",
+    "@esri/arcgis-rest-request": "^2.6.1",
+    "@esri/arcgis-rest-service-admin": "^2.6.1",
+    "rollup": "^1.22.0",
+    "typescript": "^3.7.3"
   },
   "dependencies": {
     "adlib": "^3.0.0",
