--- a/packages/creator/package.json
+++ b/packages/creator/package.json
@@ -14,10 +14,12 @@
   "devDependencies": {
     "@esri/solution-common": "^0.5.8",
     "@esri/solution-feature-layer": "^0.5.8",
+    "@esri/solution-file": "^0.5.8",
     "@esri/solution-group": "^0.5.8",
     "@esri/solution-simple-types": "^0.5.8",
     "@esri/solution-storymap": "^0.5.8",
-    "rollup": "^1.22.0"
+    "rollup": "^1.22.0",
+    "typescript": "^3.7.3"
   },
   "dependencies": {
     "tslib": "^1.10.0"
