--- a/packages/deployer/package.json
+++ b/packages/deployer/package.json
@@ -16,7 +16,8 @@
     "@esri/solution-feature-layer": "^0.5.8",
     "@esri/solution-simple-types": "^0.5.8",
     "@esri/solution-storymap": "^0.5.8",
-    "rollup": "^1.22.0"
+    "rollup": "^1.22.0",
+    "typescript": "^3.7.3"
   },
   "dependencies": {
     "tslib": "^1.10.0"
