--- a/packages/viewer/package.json
+++ b/packages/viewer/package.json
@@ -13,7 +13,8 @@
   ],
   "devDependencies": {
     "@esri/solution-common": "^0.5.8",
-    "rollup": "^1.22.0"
+    "rollup": "^1.22.0",
+    "typescript": "^3.7.3"
   },
   "dependencies": {
     "tslib": "^1.10.0"
