--- a/packages/deployer/examples/deploySolution/package.json
+++ b/packages/deployer/examples/deploySolution/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@esri/arcgis-rest-auth": "^2.7.0",
+    "@esri/arcgis-rest-feature-layer": "^2.7.0",
     "@esri/arcgis-rest-portal": "^2.7.0",
     "@esri/arcgis-rest-request": "^2.7.0",
     "@esri/arcgis-rest-service-admin": "^2.7.0",
